tests/Tuc/Fixtures/errors/WrongParticipantIndentation.tuc
tuc parse error test
participants
    GenericService parts
        StreamListener parts
